[package]
name = "roastn"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = { path = "../rust-secp256k1", version = "0.31.1", default-features = false, features = ["global-context"] }
sha2 = "0.10"
url = "2.4"
thiserror = "1.0"
unicode-normalization = "0.1"
dashmap = "6.1"
fasthash = "0.4"
lazy_static = "1.4"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
bech32 = "0.11.0"
regex = "1.11.1"
bytes = "1.10.1"
lowercase-hex = "0.1.0"
slotmap = "1.0.7"
glidesort = "0.1.2"
getrandom = "0.3"

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_arch = "wasm64")))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-tungstenite = "0.18.0"
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.14", features = ["tokio"] }
heed = "0.20"

[dev-dependencies]
tempfile = "3.0"
