[package]
name = "ritual"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["andunië", "andunie@cassis.cash"]
description = "Simple and powerful Nostr library."
repository = "https://github.com/andunieee/ritual"
keywords = ["nostr"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = { path = "../rust-secp256k1", version = "0.31.1", features = ["rand", "global-context"] }
sha2 = "0.10"
url = "2.4"
thiserror = "1.0"
unicode-normalization = "0.1"
dashmap = "6.1"
lazy_static = "1.4"
futures = "0.3"
futures-util = "0.3"
bech32 = "0.11.0"
regex = "1.11.1"
bytes = "1.10.1"
lowercase-hex = "0.1.0"
slotmap = "1.0.7"
glidesort = "0.1.2"
base64 = "0.22.1"
chacha20 = "^0.9"
hmac = "0.12.1"
scrypt = "0.11.0"
chacha20poly1305 = "0.10"
itertools = "0.14.0"
rkyv = "0.8.11"
foldhash = "0.1.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio_with_wasm = { version = "0.8.7", features = ["rt", "sync", "time"] }
web-sys = { version = "0.3", features = ["console", "BinaryType", "Blob", "CloseEvent", "ErrorEvent", "MessageEvent", "DomException", "WebSocket"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
old_getrandom = { package = "getrandom", version = "^0.2", features = ["js"] }
getrandom = { version = "^0.3", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["rt", "sync", "time"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-tungstenite = "0.18.0"
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.14", features = ["tokio"] }
sha2 = { version = "0.10", features = ["asm"] }
lmdb-master-sys = "0.2.5"

[dev-dependencies]
assertables = "9.8.2"
tempfile = "3.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.50"
