[package]
name = "rnostr-database"
version = "0.1.0"
edition = "2021"
description = "Database functionality for Nostr events"
license = "MIT"

[dependencies]
rnostr-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
