[package]
name = "rnostr-upper"
version = "0.1.0"
edition = "2021"
description = "Upper layer Nostr protocol functionality"
license = "MIT"

[dependencies]
rnostr-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
